# EQ_companion_ai

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: main.py  users.py  vector_db_setup.py
backend/agents/: persona_agent.py
backend/prompts/: persona_template.txt
backend/utils/: chat_parser.py  trait_extractor.py
frontend/: package-lock.json  package.json
frontend/components/: ChatBubble.jsx
frontend/pages/: Chat.jsx  Login.jsx  Signup.jsx  UploadChat.jsx
frontend/src/: App.css  App.jsx
persona-configs/: aarav.json  krish.json  leo.json  rhea.json
