[project]
name = "ai-persona-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "fastapi>=0.116.1",
    "groq>=0.30.0",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.6",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "openai>=1.97.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
